--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ encoding: "utf-8"
 comments: true
 
 baseurl: "" # change to empty string ""
-domain_name: www.ivaneye.com
+domain_name: ivaneye.com
 google_analytics:
 
 source:      source
@@ -32,8 +32,8 @@ title: 从0到1
 description: "思考，执行，表达！"
 meta_description: "Architecturer"
 meta_keywords: "blog,java,clojure,golang,go,architectures"
-url: http://www.ivaneye.com
-production_url: http://www.ivaneye.com
+url: http://ivaneye.com
+production_url: http://ivaneye.com
 repo:
 disqus_shortname: ""
 rss_path: source/
@@ -41,7 +41,7 @@ author:
   name      : wangyifan
   image     : /img/head.jpg
   email     : ivaneye@foxmail.com
-  url       : http://www.ivaneye.com
+  url       : http://ivaneye.com
   facebook  : http://facebook.com/ivan.pig.73
   twitter   : http://twitter.com/ivanpig
   github    : http://github.com/ivaneye
