--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ name: wangyifan
 title: 从0到1
 description: "思考，执行，表达！"
 meta_description: "Architecturer"
-meta_keywords: "blog,java,clojure,golang,go,architectures"
+meta_keywords: "思考,执行,表达,架构,编程"
 url: http://ivaneye.com
 production_url: http://ivaneye.com
 repo:
