--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ title: 从0到1
 description: "思考，执行，表达！"
 meta_description: "思考,执行,表达,架构,编程"
 meta_keywords: "思考,执行,表达,架构,编程"
-url: http://ivaneye.com
-production_url: http://ivaneye.com
+url: https://ivaneye.com
+production_url: https://ivaneye.com
 repo:
 disqus_shortname: ""
 rss_path: source/
@@ -41,7 +41,7 @@ author:
   name      : wangyifan
   image     : /img/head.jpg
   email     : ivaneye@foxmail.com
-  url       : http://ivaneye.com
+  url       : https://ivaneye.com
   facebook  : http://facebook.com/ivan.pig.73
   twitter   : http://twitter.com/ivanpig
   github    : http://github.com/ivaneye
