--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: 思考，执行，表达！
-subtitle:
-description:
+subtitle: 说人话的知识博客！我随便扯扯，你随便看看！
+description: 说人话的知识博客！我随便扯扯，你随便看看！
 author: IvanEye
 language: zh-CN
 timezone:
